artemis-configs/openshift/dc2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: broker-amq
  name: broker-amq-headless
spec:
  port:
    targetPort: artemis-ssl
  tls:
    termination: passthrough
  to:
    kind: Service
    name: broker-amq-headless
